data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_304.wast
;; 5. **Loop with Conditional Exit (br_if) and Nop Instructions**:    - Construct a loop with complex conditions for `br_if` and embedded `nop` instructions. This checks if `wizard_engine` can handle initialization contexts correctly to prevent false infinite loops.    - Constraint: Conditions for exiting the loop must be met correctly irrespective of `nop`.

(assert_invalid
  (module
    (func $loop_with_nop (loop $exit
      (nop)
      (if (i32.eqz (i32.const 0))
        (then (br_if $exit (i32.const 1)))
      )
      (br $exit)
    ))
  )
  "invalid module"
)